--- a/style.css
+++ b/style.css
@@ -1,29 +1,12 @@
-body {
-   font-family: 'Times New Roman', Times, serif
-}
-
-.card .img-wrap {
-   height: 250px;
-   padding: .5rem;
-   display: block;
-}
-.card img {
-   height: 100%;
-   width: auto;
-   max-width: 100%;
-   object-fit: cover;  
-}
-.checked {
-   color: orange;
-}
-.title {
+.menu {
    text-decoration: none;
-   color: #212529;
+   list-style-type: none;
 }
-.price {
-   color: orange;
-   font-size: 22px;
+.menu a {
+   text-decoration: none;
+   color: black;
+   border-bottom: 2px solid black;
 }
-.rating {
-   font-size: 13px;
+.form-check-label {
+   
 }
